tests/fixtures/errors/circular_reference.norm
:root
:data
x
@items

:items
pk,next
1,@2
2,@1
